--- a/Lecture2/index.html
+++ b/Lecture2/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script source="app.js"></script>
+        <script src="app.js"></script>
         <style>
             body { font-size: 1.5 em; }
         </style>
